vlib/v/checker/tests/js_with_non_js_backend_too_many_arguments.out
vlib/v/checker/tests/js_with_non_js_backend_too_many_arguments.vv:2:4: error: too many arguments in call to `JS.Foo.bar` (non-js backend: c)
    1 | fn JS.Foo.bar() bool
    2 | JS.Foo.bar(123)
      |    ~~~~~~~~~~~~
